--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
         <input type="checkbox" id="tos" name="tos" required>
         <label for="tos">I agree to the TOS</label><br>
         
-        <input type="submit" value="Submit">
+        <button type="submit" value="Submit">Submit</button>
     </form>
     <script type="text/javascript" src="./script.js">
 </script>
